--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "cv-mariano",
+  "name": "welcome",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "framer-motion": "^12.23.12",
     "node-fetch": "3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^7.8.1",
     "react-vertical-timeline-component": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "dev": "vite"
   },
   "browserslist": {
     "production": [
