--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
-    "express": "^4.18.2",
-    "mongoose": "^8.3.1"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "mongoose": "^8.18.1",
+    "nodemon": "^3.1.10"
   }
 }
