--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "mongoose": "^8.18.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
